# mlcenter

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: 01-Titanic.ipynb
src/mlcenter/: __init__.py  app.py
tests/mlcenter/: test_sample.py
