[tool.poetry]
name = "mlcenter"
version = "0.0.1"
description = "Python client for MLCenter MLOps Platform"
authors = ["cristianexer <daniel.fat@mlcenter.org>"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cristianexer/mlcenter"
repository = "https://github.com/cristianexer/mlcenter"
documentation = "https://github.com/cristianexer/mlcenter/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/cristianexer/mlcenter/issues"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.8.0"
jupyterlab = "^3.0.0"
pandas = "^1.2.0"
jupyterlab_git = "^0.23.3"
jupyterlab_widgets = "^1.0.0"
requests = "^2.28.1"
black = "^22.12.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.6.2"
black = "^22.0"
bump2version = "^1.0.1"
isort= "^5.0.8"
flake8 = "^5.0.4"
jedi-language-server = "^0.22.0"
pylint = "^2.6.0"
pytest = "^7.0.1"
pytest-cov = "^3.0"
pytest-xdist = "^2.5.0"
vulture = "^2.3"
mypy = "^0.982"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py38']

[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
